Update overview table in site detailed dashboard

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -324,7 +324,7 @@
                             <div class="col-12" id="records-sites">
                             </div>
                         </div>
-                        <div class="card-body" id="fish-ssdd-origins">
+                        <div class="card-body occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-6 sub-title site-details-header">
@@ -340,8 +340,25 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-body"
-                             id="fish-ssdd-conservation-status">
+
+                        <div class="card-body occurrences-table-view">
+                            <div class="col-12">
+                                <div class="row">
+                                    <div class="col-6 sub-title site-details-header">
+                                         Endemism
+                                    </div>
+                                    <div class="col-6 sub-title site-details-header">
+                                        Number of occurrence
+                                        records
+                                    </div>
+                                    <div class="col-12"
+                                         id="ssdd-endemism">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-6 sub-title site-details-header">
