--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2512,37 +2512,18 @@ div:hover::-webkit-scrollbar {
     font-size: 12px;
 }
 
-#fish-ssdd-origins .col-6.sub-title {
+.occurrences-table-view .col-6.sub-title {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     font-size: 12px;
     font-weight: 700;
 }
 
-#fish-ssdd-origins .title_column {
+.occurrences-table-view .title_column {
     font-weight: 700;
 }
 
-#fish-ssdd-origins .col-6 {
-    padding: 0.25rem;
-    border: 1px solid #d3d4d1;
-    padding-left: 0.5rem;
-    font-size: 12px;
-}
-
-
-#fish-ssdd-conservation-status .col-6.sub-title {
-    padding: 0.25rem;
-    border: 1px solid #d3d4d1;
-    font-size: 12px;
-    font-weight: 700;
-}
-
-#fish-ssdd-conservation-status .title-column {
-    font-weight: 700;
-}
-
-#fish-ssdd-conservation-status .col-6 {
+.occurrences-table-view .col-6 {
     padding: 0.25rem;
     border: 1px solid #d3d4d1;
     padding-left: 0.5rem;
