Fix all charts download

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -274,9 +274,9 @@
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div class="card-body locationsite-map-wrapper">
+                    <div class="card-body">
                         <div id="locationsite-map"
-                             class="map"
+                             class="locationsite-map-wrapper"
                              style="height: 300px; width: 100%;">
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                 <div class="card" id="fish-ssdd-data-summary">
                     <div class="card-header">
                         <div class="card-header-title pull-left d-inline">
-                            Occurrence Data
+                            Occurrence Charts
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
                                 data-datac="data-summary">
