Fix table download

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -292,10 +292,9 @@
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
-                    <div id="ssdd-overview-wrapper">
-                        {# Overview Site details #}
-                        <div class="card-body"
-                             id="fish-ssdd-site-details">
+                    {# Overview Site details #}
+                    <div class="card-body" id="ssdd-overview-wrapper">
+                        <div id="fish-ssdd-site-details">
                             <div class="col-12"
                                  id="overview"></div>
                             <div class="col-12 sub-title site-details-header">
@@ -316,15 +315,16 @@
                             <div class="col-12"
                                  id="sa-ecoregions"></div>
                         </div>
-                        <div class="card-body"
-                             id="fish-ssdd-records-sites">
+                        <br/>
+                        <div id="fish-ssdd-records-sites">
                             <div class="col-12 sub-title site-details-header">
                                 Records and Sites
                             </div>
                             <div class="col-12" id="records-sites">
                             </div>
                         </div>
-                        <div class="card-body occurrences-table-view">
+                        <br/>
+                        <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-6 sub-title site-details-header">
@@ -340,12 +340,12 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="card-body occurrences-table-view">
+                        <br/>
+                        <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-6 sub-title site-details-header">
-                                         Endemism
+                                        Endemism
                                     </div>
                                     <div class="col-6 sub-title site-details-header">
                                         Number of occurrence
@@ -357,8 +357,8 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="card-body occurrences-table-view">
+                        <br/>
+                        <div class="occurrences-table-view">
                             <div class="col-12">
                                 <div class="row">
                                     <div class="col-6 sub-title site-details-header">
@@ -391,7 +391,9 @@
                         <div class="container" id="occurrence-data">
                         </div>
                         <div class="container">
-                            <button class="btn btn-info download-as-csv" style="width: 100%;">Download as CSV</button>
+                            <button class="btn btn-info download-as-csv"
+                                    style="width: 100%;">Download as CSV
+                            </button>
                         </div>
                     </div>
                 </div>
