Fix download map in taxa detail

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -22,7 +22,7 @@
                                     <div class="card-header-title pull-left d-inline">
                                         Distribution
                                     </div>
-                                    <button id="export-locationsite-map"
+                                    <button id="export-taxasite-map"
                                             class="btn btn-default pull-right">
                                         <i
                                                 class="fa fa-download"></i>
