Add download image chart

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -535,8 +535,8 @@
                         <div class="card-header-title pull-left d-inbar">
                             Endemism
                         </div>
-                        <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="fish-ssdd-cons-status-bar-chart-canvas">
+                        <button class="download-chart-image btn btn-default pull-right"
+                                data-datac="fish-ssdd-endemism-bar-chart" data-title="endemism-chart-per-year">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
