--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -529,6 +529,24 @@
                     </div>
                 </div>
 
+                {# endemism per year bar chart #}
+                <div class="card" id="fish-ssdd-cons-status-bar-chart">
+                    <div class="card-header">
+                        <div class="card-header-title pull-left d-inbar">
+                            Endemism
+                        </div>
+                        <button class="download-chart-image btn btn-default pull-right"
+                                data-datac="fish-ssdd-endemism-bar-chart" data-title="endemism-chart-per-year">
+                            <i class="fa fa-download"></i>
+                        </button>
+                    </div>
+                    <div class="card-body">
+                        <div class="col-12 fish-ssdd-endemism-bar-chart">
+                            <div class="chart-loading">Fetching...</div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
