Download table as png

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -163,6 +163,10 @@
                             <button class="btn btn-info download-as-csv">
                                 Download as CSV
                             </button>
+                            <i data-download-title="SASS Taxa per biotope"
+                               data-toggle="tooltip" data-placement="left"
+                               title="Download table as PNG"
+                               class="fa fa-download pull-right download-icon download-table" style="padding-top: 7px; padding-left: 5px; padding-right: 5px;"></i>
                         </div>
                     </div>
 
