Update overview panel

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -221,20 +221,20 @@
             <div class="col-4 value-column"><%= fbis_site_code %></div>
         </div>
         <div class="row">
-            <div class="col-8 caption-column">Site Name</div>
-            <div class="col-4 value-column"><%= site_name %></div>
+            <div class="col-8 caption-column">Site Description</div>
+            <div class="col-4 value-column"><%= site_description %></div>
         </div>
         <div class="row">
             <div class="col-8 caption-column">Site Coordinates</div>
             <div class="col-4 value-column"><%= site_coordinates %></div>
         </div>
         <div class="row">
-            <div class="col-8 caption-column">Site Description</div>
-            <div class="col-4 value-column"><%= site_description %></div>
-        </div>
-        <div class="row">
             <div class="col-8 caption-column">Geomorphological Zone</div>
             <div class="col-4 value-column"><%= geomorphological_zone %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Ecological Region</div>
+            <div class="col-4 value-column"><%= ecological_region %></div>
         </div>
         <div class="row">
             <div class="col-8 caption-column">River</div>
