Fix site detailed dashboard

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -388,7 +388,7 @@
                         </button>
                     </div>
                     <div class="card-body">
-                        <div class="container" id="occurrence-data">
+                        <div id="occurrence-data">
                         </div>
                         <div class="container">
                             <button class="btn btn-info download-as-csv"
