--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -414,6 +414,10 @@
                     </div>
                 </div>
 
+                <div class="sass-dashboard-button-container container" style="padding: 10px; text-align: center">
+                    <a href="#" class="btn btn-info" id="sass-dashboard-button" style="display:none; font-size: 10pt;">Open SASS Dashboard</a>
+                </div>
+
             </div>
             {# end of col-lg-4 #}
 
