--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -310,7 +310,7 @@
             </button>
         </div>
     </div>
-    {% if user.is_authenticated %}
+    {% if user.is_authenticated and bims_preferences.enable_user_boundary_filter %}
         <div class="row sub-filter">
             <div class="col-lg-12 subtitle">
                 USER BOUNDARY
@@ -456,12 +456,14 @@
                 <i class="fa fa-check" aria-hidden="true"></i>
             </div>
         {% endif %}
+        {% if bims_preferences.enable_download_data_from_map %}
         <div id="download-control" class="download-control sub-control-panel"
         data-toggle="popover"
              data-placement="right" data-trigger="hover"
              data-content="Download Data">
             <i class="fa fa-download" aria-hidden="true"></i>
         </div>
+        {% endif %}
         <div id="print-control" class="print-map-control sub-control-panel"
              data-toggle="popover"
              data-placement="right" data-trigger="hover"
