--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -37,6 +37,7 @@
         const listBoundaryAPIUrl = '{% url "list-boundary" %}';
         const listNonBiodiversityLayerAPIUrl = '{% url "list-non-biodiversity-layer" %}';
         const uploadDataUrl = '{% url "upload-collection" %}';
+        const multiSitesOverviewDataUrl = '{% url "multi-location-sites-overview" %}';
         const collectionCategory = "{{ collection_category|safe }}";
         const csrfmiddlewaretoken = "{{ csrf_token }}";
         const biological_modules = "{{ biological_modules|safe }}";
