--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -220,6 +220,20 @@ h6 {
     color: white;
 }
 
+.fbis-button-small.disabled {
+    background-color: #a0a0a0 !important;
+}
+
+.fbis-button-small.disabled:active {
+    background-color: #a0a0a0 !important;
+    box-shadow: inset 0 0 0 rgba(0,0,0, 0) !important;
+}
+
+.fbis-button-small.disabled:hover {
+    background-color: #a0a0a0 !important;
+    cursor: default;
+}
+
 .fbis-button-small span {
     align-items: center;
     height: 100%;
