--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -72,7 +72,7 @@
             <div class="col-lg-3">
                 <div class="form-group">
                     <label for="date" class="input-label">Date :</label>
-                    <input type="date" class="form-control" id="date" name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} >
+                    <input type="text" class="form-control" id="date" name="date" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} >
                 </div>
                 <div class="form-group">
                     <label for="time" class="input-label">Time :</label>
