--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -318,10 +318,10 @@ html, body, .map, .map-wrapper, #map-container {
     background: #f9f9f9;
     padding-right: 15px;
     padding-left: 15px;
-    padding-top: 5px;
+    padding-top: 8px;
     padding-bottom: 5px;
-    font-weight: 400;
-    font-size: 16px;
+    font-weight: bold;
+    font-size: 15px;
     font-family: "Roboto Condensed";
 }
 
@@ -514,8 +514,11 @@ html, body, .map, .map-wrapper, #map-container {
 .map-control-panel-box .subtitle, .search-results-total {
     background-color: #f9f9f9;
     text-align: left;
-    padding: 5px;
+    padding: 10px 8px 5px 10px;
     border-bottom: 1px solid rgb(227, 227, 227);
+    font-size: 14px;
+    font-weight: bold;
+    color: #4e565f;
 }
 
 .filter-icon-arrow {
@@ -1081,7 +1084,6 @@ div:hover::-webkit-scrollbar {
     cursor: pointer;
     z-index: 999;
 
-
     overflow: hidden;
 
     position: fixed;
@@ -1187,7 +1189,7 @@ div:hover::-webkit-scrollbar {
 
 .button-filter-wrapper {
     text-align: center;
-    padding: 5px 40px;
+    padding: 8px 47px;
 }
 
 .upload-data-button {
@@ -2311,11 +2313,9 @@ div:hover::-webkit-scrollbar {
     max-height: 20vh;
 }
 
-
 #filter_collectors_chosen .chosen-results {
     max-height: 20vh;
 }
-
 
 #filter_study_reference_chosen .search-choice {
     line-height: 150%;
@@ -2338,7 +2338,6 @@ div:hover::-webkit-scrollbar {
     width: 100%;
     margin-bottom: 0;
 }
-
 
 .species-detail-cell {
     max-width: 50%;
@@ -2382,7 +2381,6 @@ div:hover::-webkit-scrollbar {
     margin-top: auto;
     margin-bottom: auto;
 }
-
 
 .fbis-rpanel-block-dd .fbis-rpanel-block-text {
     padding: 0.25rem;
@@ -2450,7 +2448,6 @@ div:hover::-webkit-scrollbar {
     margin-right: auto !important;
 }
 
-
 #filter-validation-error {
     font-size: 9pt;
     color: red;
@@ -2485,7 +2482,6 @@ div:hover::-webkit-scrollbar {
     font-weight: 700;
 
 }
-
 
 #fish-ssdd-records-sites .col-6 {
     padding: 0.25rem;
@@ -2600,7 +2596,6 @@ div:hover::-webkit-scrollbar {
     align-self: center;
 }
 
-
 #site-details-wrapper .row .caption-column {
     color: #4a4a4a;
     text-align: left;
@@ -2632,4 +2627,27 @@ div:hover::-webkit-scrollbar {
 
 .overview-data {
     text-align: center;
+}
+
+.apply-filter, .clear-filter {
+    text-transform: uppercase;
+    font-size: 10pt;
+    font-weight: bold;
+    padding: 5px 15px 5px 15px;
+    background-color: white;
+    color: #5e5e5e;
+    border: 1px solid #afafaf; /* Green */
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.apply-filter:hover, .clear-filter:hover {
+    cursor: pointer;
+    border-color: #5e5e5e;
+    color: #404040;
+    background-color: rgba(0, 0, 0, 0.03);
+}
+
+.checkbox-label {
+    font-size: 12pt;
 }
