--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -267,7 +267,7 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .map-control-panel-box {
-    width: 265px;
+    width: 280px;
     background-color: white;
     position: absolute;
     top: 0;
@@ -281,7 +281,7 @@ html, body, .map, .map-wrapper, #map-container {
     margin-left: 85px;
     margin-top: 60px;
     z-index: 100;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     max-height: 90%;
     height: fit-content;
@@ -292,7 +292,7 @@ html, body, .map, .map-wrapper, #map-container {
 }
 
 .map-search-result {
-    margin-left: 351px !important;
+    margin-left: 366px !important;
     padding-bottom: 0;
     min-height: 209px;
 }
