Show source collection filter in frontend

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -30,6 +30,7 @@
         const geocontextUrl = '{{ geocontext_url }}';
         const geocontextCollectionKey = '{{ geocontext_collection_key }}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
+        const listSourceCollectionAPIUrl = '{% url "list-source-collection" %}';
         const listReferenceAPIUrl = '{% url "list-reference" %}';
         const isUsingReferenceFilter = "{% if use_reference_filter %} true {% else %} false {% endif %}";
         const centerPointMap = '{{ center_point_map }}';
