--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -247,9 +247,32 @@
                 </div>
             </div>
         {% endif %}
+
+         <div class="source-collection-wrapper"></div>
+
         </div>
 </script>
 
+
+<script type="text/html" id="source-collection-template">
+        <div class="study-reference-wrapper">
+            <div class="row sub-filter">
+                <div class="col-lg-12 subtitle">
+                     DATA SOURCES <i
+                        class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
+                        class="fa fa-angle-down pull-right filter-icon-arrow"></i>
+                </div>
+            </div>
+            <div class="row" style="display: none">
+                <div class="col-lg-12 filter-content data-source-list">
+                </div>
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter"><i class="fa fa-check" aria-hidden="true"></i> Apply</button>
+                    <button class="clear-filter"><i class="fa fa-times" aria-hidden="true"></i> Clear</button>
+                </div>
+            </div>
+        </div>
+</script>
 
 <script type="text/html" id="reference-category-template">
     <div class="row sub-filter">
