--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -33,7 +33,7 @@
         <div class="logo hide-logo pull-right"><img width="50"
                                                     src="{% static 'img/bims-stamp.png' %}">
         </div>
-        <h2 class="dashboard-title">SASS Dashboard</h2>
+        <h2 class="dashboard-title">SASS Dashboard <span id="current_page"></span><span id="total_pages"></span> </h2>
         <div class="row">
             <div class="col-md-7">
                 <div class="map-container ajax-container">
